<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_color_selector"
    tools:context="com.example.jonathanmoreno.loginscreen.ResetPasswordActivity">



    <android.support.v7.widget.CardView
        android:layout_width="336dp"
        android:layout_height="432dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="36dp"
        app:cardCornerRadius="3dp"
        app:cardElevation="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.457">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/fpTextView"
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="48dp"
                android:text="@string/forgotPasswordText"
                android:textSize="30sp"
                android:textStyle="italic"
                android:typeface="monospace" />

            <TextView
                android:id="@+id/fpInstructionsTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="115dp"
                android:gravity="center"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:text="@string/resetPasswordText"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/fpResetEditText"
                android:layout_width="288dp"
                android:layout_height="42dp"
                android:layout_centerInParent="true"
                android:ems="10"
                android:hint="@string/emailEdit"
                android:inputType="textEmailAddress" />

            <Button
                android:id="@+id/fpResetButton"
                android:layout_width="292dp"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="100dp"
                android:background="?attr/colorPrimaryDark"
                android:text="@string/resetPasswordBtn"
                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/fpReturnToLoginTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="52dp"
                android:text="@string/returnToLoginTextView"
                android:textColor="@android:color/black"
                android:textStyle="bold" />
        </RelativeLayout>
    </android.support.v7.widget.CardView>
</android.support.constraint.ConstraintLayout>
